src/test/resources/private/typechecking/fail/member_access/member_02.jova
class Class2 {
    public int test2() {
       return 0;
    }
}

class Class1 {
    private int test1(Class2 c){
        return c.test();
    }
}



